--- a/client/src/styles/decks.css
+++ b/client/src/styles/decks.css
@@ -40,79 +40,52 @@
     text-shadow: -0px 0px 10px rgb(129, 221, 36);
 }
 
-.decks {
+/* .decks {
     display: flex;
     flex-direction: column;
-}
+} */
 
 li.deckListItem {
     display: flex;
     width: 90%;
     margin-left: 5%;
     margin-right: 5%;
-    border-bottom: 1px solid rgb(143, 204, 52);
+    border-bottom: 1px solid rgb(135, 180, 66);
     margin-top: 8px;
     padding-bottom: 8px;
 }
 
+li.deckListItem:last-child {
+    border-bottom: none;
+}
+
 li .deckName {
-    width: 62%;
+    padding-left: 10px;
+    width: 60%;
     margin: auto 3%;
 }
 
 li .cardsRemaining {
-    width: 15%;
+    width: 20%;
     margin: auto 3%;
     text-align: center;
 }
 
-li .more {
-    width: 5%;
-    margin: auto 2%;
-    font-weight: 600;
-    font-size: 20px;
-    letter-spacing: 1.5px;
-    padding-bottom: 6px;
-}
-
-/* ----------------------------POP-UPS-------- */
-
-.popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 4998;
-}
-
-.popup-box {
-    position: relative;
-    width: 300px;
-    height: 150px;
-    background-color: white;
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 20px;
-}
-
-
-.popup-content {
-    color: rgb(51, 53, 50);
+.more {
+    width: 10%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    height: 100%;
-    text-align: center;
+    padding-right: 10px;
 }
 
-.popup.active {
+.more-btn {
+    padding-bottom: 10px;
+    border-width: 1.2px;
+    background-color: rgba(52, 83, 39, 0.151);
+    box-shadow: 0 0 0 white;
+    height: 20px;
     display: flex;
+    align-items: center;
 }
 
 
