--- a/client/src/styles/decks.css
+++ b/client/src/styles/decks.css
@@ -1,26 +1,3 @@
-/* ----------------------- ROW 1 -------------------------- */
-.row1 {
-    display: flex;
-    align-items: end;
-    justify-content: space-between;
-    height: 80px;
-}
-
-.deckHeading {
-    flex-basis: 50%;
-    padding-left: 10%;
-    color: rgb(187, 187, 187);
-    margin-bottom: 5px;
-}
-
-.cardHeading {
-    color: rgb(175, 175, 175);
-    margin-bottom: 5px;
-    flex-basis: 50%;
-    display: flex;
-    justify-content: space-around;
-}
-
 /* ----------------------- DECKS CONTAINER / row 2-------------------------- */
 
 .decksContainer {
@@ -46,6 +23,8 @@
 } */
 
 li.deckListItem {
+    position: relative;
+
     display: flex;
     width: 90%;
     margin-left: 5%;
