--- a/client/src/styles/home/deckList.css
+++ b/client/src/styles/home/deckList.css
@@ -5,6 +5,7 @@
     height: 500px;
     padding-top: 20px;
     overflow-y: scroll;
+    background-color: var(--background-2);
 }
 
 .plus {
@@ -14,6 +15,7 @@
     padding: 5%;
     padding-left: 15%;
     text-shadow: -0px 0px 10px rgb(129, 221, 36);
+    text-shadow: -0px 0px 10px var(--accent-color-1);
 }
 
 /* .decks {
@@ -61,7 +63,8 @@ li .cards-remaining {
 .more-btn {
     padding-bottom: 10px;
     border-width: 1.2px;
-    background-color: rgba(52, 83, 39, 0.151);
+    background-color: rgb(145, 145, 145);
+    background-color: var(--accent-color-4);
     box-shadow: 0 0 0 white;
     height: 20px;
     display: flex;
