--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -3,10 +3,10 @@
   line-height: 1.5;
   box-sizing: border-box;
   font-synthesis: none;
-  text-rendering: optimizeLegibility;
+  /*   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; */
 }
 
 * {
