--- a/client/src/styles/theme.css
+++ b/client/src/styles/theme.css
@@ -1,10 +1,15 @@
 :root {
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
+    --background-1: rgb(57, 62, 58);
     background-color: rgb(57, 62, 58);
-    --accent-color-1: rgb(129, 221, 36);
-}
+    background-color: var(--background-1);
 
-.theme-color {
-    background: rgb(59, 105, 105);
+    --background-2: rgb(49, 70, 70);
+
+    --accent-color-1: rgb(129, 221, 36);
+    --accent-color-2: rgb(118, 196, 192);
+    --accent-color-3: rgb(102, 112, 104);
+    --accent-color-4: rgb(78, 90, 90);
+    --accent-color-5: rgb(184, 228, 144);
 }
