--- a/client/src/styles/addCard/addCardFrontBack.css
+++ b/client/src/styles/addCard/addCardFrontBack.css
@@ -12,11 +12,15 @@ h1.add-card span {
     color: var(--accent-color-5);
 }
 
-.decks-container.add-cards-container {
-    height: auto;
+.add-cards-container {
+    width: 50vw;
+    height: 500px;
+    padding-top: 20px;
+    overflow-y: scroll;
     margin-top: 30px;
     display: flex;
     justify-content: center;
+    background-color: none;
 }
 
 .add-cards-sub-container * {
@@ -47,8 +51,8 @@ h1.add-card span {
     vertical-align: top;
     width: 500px;
     height: 200px;
-    background-color: rgb(165, 165, 165);
-    background-color: var(--accent-color-3)
+    /* background-color: rgb(165, 165, 165);
+    background-color: var(--accent-color-3) */
 }
 
 .add-cards-sub-container>button {
