--- a/client/src/styles/home/deckList.css
+++ b/client/src/styles/home/deckList.css
@@ -6,6 +6,7 @@
     padding-top: 20px;
     overflow-y: scroll;
     background-color: var(--background-2);
+    color: black;
 }
 
 .plus {
@@ -63,8 +64,9 @@ li .cards-remaining {
 .more-btn {
     padding-bottom: 10px;
     border-width: 1.2px;
-    background-color: rgb(145, 145, 145);
-    background-color: var(--accent-color-4);
+    border-radius: 3px;
+    color: black;
+    background-color: white;
     box-shadow: 0 0 0 white;
     height: 20px;
     display: flex;
