--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -14,21 +14,19 @@
     font-size: 1.3em;
 }
 
-.mission input {
+.quote input {
+    flex-basis: 30%;
+    display: flex;
+    justify-content: flex-end;
     margin-left: 20px;
-    height: 30px;
-    background-color: rgb(38, 44, 44);
+    height: 25px;
+    background-color: rgba(43, 53, 53, 0.807);
     color: white;
+    text-align: center;
 }
 
 .mission input:focus {
     background-color: rgb(82, 83, 83);
-}
-
-.current {
-    flex-basis: 30%;
-    display: flex;
-    justify-content: flex-end;
 }
 
 .fa-layer-group {
