login window adjustments with or divider

--- a/client/src/styles/login/loginPage.css
+++ b/client/src/styles/login/loginPage.css
@@ -23,13 +23,15 @@
 
 .auth-window-container {
     position: relative;
-    padding: 10vh 0 5vh 0;
+    padding: 10vh 0 3vh 0;
     border: 1px solid white;
+    box-shadow: 0px 10px 20px var(--accent-color-5);
+
     border-radius: 8px;
     width: 40vw;
-    min-height: 50vh;
-    background-color: var(--background-2);
-
+    min-height: 35vh;
+    background-color: rgb(158, 179, 155);
+    color: var(--accent-color-2);
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -65,14 +67,109 @@
     justify-content: center;
     align-self: center;
     justify-self: center;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
 .auth-window-container .sign-up-button button {
-    background-color: rgb(110, 110, 103);
+    background-color: rgb(255, 255, 255);
+    color: #757575;
+    border: none;
+}
+
+.auth-window-container .btn-text.sign-in-with-email {
+    padding-left: 0;
+}
+
+.auth-window-container .or-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.or-container span {
+    border-bottom: 1px solid var(--accent-color-3);
+    height: 12px;
+    width: 40%;
+}
+
+.auth-window-container .or {
+    width: 20px;
 }
 
 .auth-window-container .go-to-button {
-    background-color: rgba(240, 248, 255, 0);
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(62, 236, 239);
+    color: var(--accent-color-3);
+    border: none;
     padding: 3px 10px;
+}
+
+/* google button */
+.google-button-container {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    margin-bottom: 20px;
+    /* margin-top: 100px; */
+}
+
+.google-btn {
+    margin: 25px;
+    width: 80%;
+    min-width: 184px;
+    max-width: 184px;
+    height: 42px;
+    background-color: #fcfcfc;
+    border-radius: 4px;
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .2);
+    cursor: pointer;
+    cursor: hand;
+    align-self: center;
+    user-select: none;
+    transition: all 400ms ease 0s;
+    display: flex;
+}
+
+.google-btn .google-icon-wrapper {
+    position: absolute;
+    margin-top: 1px;
+    margin-left: 1px;
+    width: 40px;
+    height: 40px;
+    border-radius: 2px;
+    user-select: none
+}
+
+.google-btn .google-icon-svg {
+    position: absolute;
+    margin-top: 11px;
+    margin-left: 11px;
+    width: 18px;
+    height: 18px;
+    user-select: none
+}
+
+.google-btn .btn-text {
+    display: flex;
+    justify-content: center;
+    padding-left: 22px;
+    width: 100%;
+    align-items: center;
+    color: #757575;
+    font-size: 14px;
+    letter-spacing: .2px;
+    font-family: Roboto;
+    user-select: none
+}
+
+.google-btn:hover {
+    box-shadow: 0 3px 8px rgba(117, 117, 117, .5);
+    user-select: none
+}
+
+.google-btn:active {
+    box-shadow: 0 1px 1px #757575;
+    background: #F8F8F8;
+    color: #fff;
+    user-select: none
 }
