--- a/client/src/styles/addCard/pageLayout.css
+++ b/client/src/styles/addCard/pageLayout.css
@@ -4,15 +4,8 @@
 
 .add-cards-and-card-preview-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    padding-top: 20px;
     gap: 2vw;
-}
-
-.gpt-bot-container {
-    width: 40vw;
-    display: flex;
-    justify-content: center;
-    /* align-items: center; */
-    max-height: 100vh;
-    margin-top: 8vh;
+    max-width: 100vw;
 }
