--- a/client/src/styles/gptBot/gptBot.css
+++ b/client/src/styles/gptBot/gptBot.css
@@ -7,11 +7,42 @@
 }
 
 .gpt-bot-sub-container {
-    position: fixed;
-    bottom: 70px;
-    width: 50%;
-    height: 10%;
-    background-color: rgb(34, 34, 36);
-    box-shadow: 0px 1px 10px var(--accent-color-5);
+    box-sizing: border-box;
+    padding: 10px;
+    position: absolute;
+    bottom: 50px;
+    width: 65%;
+    height: 20%;
+    background-color: rgba(0, 0, 0, 0);
+    /* color: aliceblue; */
+    box-shadow: 0px 1px 10px rgb(26, 26, 26);
     border-radius: 6px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.gpt-bot-sub-container form {
+    width: 100%;
+    height: 20px;
+
+}
+
+.gpt-bot-sub-container input {
+    padding-left: 5px;
+    width: 93%;
+    background-color: rgba(240, 248, 255, 0);
+    height: 20px;
+    border: none;
+    outline: .5px solid rgba(234, 234, 234, 0.419);
+}
+
+.gpt-bot-sub-container input::placeholder {
+    color: rgb(205, 204, 204);
+}
+
+.gpt-bot-sub-container input:focus {
+    outline: none;
+    box-shadow: none;
 }
