--- a/client/src/styles/home/decksColHeadings.css
+++ b/client/src/styles/home/decksColHeadings.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: end;
     justify-content: space-between;
-    height: 50px;
+    height: 7vh;
     width: 50vw;
 }
 
@@ -30,5 +30,13 @@
 
     .card-heading {
         padding-right: 10px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    body .row-1 {
+
+        height: 4vh;
+
     }
 }
