--- a/client/src/styles/addCard/pageLayout.css
+++ b/client/src/styles/addCard/pageLayout.css
@@ -9,3 +9,13 @@
     gap: 2vw;
     max-width: 100vw;
 }
+
+@media screen and (max-width: 767px) {
+    .add-cards-and-card-preview-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0vw;
+        max-width: 0vw;
+    }
+}
