layout fixed for mobile addcars page

--- a/client/src/styles/addCard/addCardFrontBack.css
+++ b/client/src/styles/addCard/addCardFrontBack.css
@@ -69,6 +69,8 @@
     flex-basis: 30px;
     width: 200px;
     margin-bottom: 30px;
+    background-color: rgba(97, 147, 191, 0);
+    box-shadow: var(--box-shadow);
 }
 
 .card-front, .card-back {
@@ -93,13 +95,21 @@
 
     .add-cards-container {
         width: 100vw;
+        margin-top: 20px;
     }
 
     .add-cards-sub-container .card-text {
         padding: 10px;
         vertical-align: top;
-        width: 80vw;
-        height: 100px;
+        width: 70vw;
+        height: 70px;
 
+    }
+
+    .add-cards-sub-container>button {
+        flex-basis: 30px;
+        width: auto;
+        font-size: .7em;
+        margin-bottom: 30px;
     }
 }
