--- a/client/src/styles/addCard/displayCardsContainer.css
+++ b/client/src/styles/addCard/displayCardsContainer.css
@@ -48,6 +48,8 @@
 
 @media screen and (max-width: 700px) {
     .display-cards-container {
+        /* hide on mobile for now */
+        display: none;
         height: 10vh;
         width: 70vw;
         margin-right: 0vw;
@@ -59,7 +61,9 @@
     }
 
     .card-list-heading {
-        display: flex;
+        /* hide on mobile for now */
+        display: none;
+
         justify-content: flex-start;
         color: var(--heading-color);
         font-size: var(--heading-size);
