--- a/client/src/styles/footer.css
+++ b/client/src/styles/footer.css
@@ -66,3 +66,12 @@ footer .logout-message {
     top: 0;
     right: 100px;
 }
+
+@media screen and (max-width: 700px) {
+    footer.footer {
+
+        height: 80px;
+        margin-bottom: 0px;
+
+    }
+}
