--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -33,3 +33,11 @@
     font-size: 22px;
     padding-right: 10px;
 }
+
+@media screen and (max-width: 700px) {
+    .header {
+
+        height: 60px;
+        margin-bottom: 0px;
+    }
+}
