study cards page coming along

--- a/client/src/styles/addCard/pageLayout.css
+++ b/client/src/styles/addCard/pageLayout.css
@@ -2,6 +2,13 @@
     display: flex;
 }
 
+.add-card-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: auto 5vw;
+}
+
 .add-cards-and-card-preview-container {
     display: flex;
     flex-direction: row;
