--- a/client/src/styles/addCard/addCardFrontBack.css
+++ b/client/src/styles/addCard/addCardFrontBack.css
@@ -80,12 +80,20 @@
 
 .card-front .card-text {
     font-size: 1.4em;
-    background-color: var(--accent-color-2);
+    background-color: var(--addCard-theme);
+    border: none;
+    box-shadow: var(--box-shadow);
 }
 
 .card-back .card-text {
     font-size: 1.2em;
-    background-color: var(--accent-color-2);
+    background-color: var(--addCard-theme);
+    border: none;
+    box-shadow: var(--box-shadow);
+}
+
+.add-card-plus-button {
+    color: var(--accent-color-1);
 }
 
 @media screen and (max-width: 700px) {
